# langstage

./: .gitignore  CHANGELOG.md  Dockerfile.test  README.md  hatch_build.py  inject.py  pyproject.toml
.github/workflows/: test.yml
cowork_dash/: __init__.py  __main__.py  agent.py  agent_loader.py  app.py  browser.py  canvas.py  cli.py  components.py  config.py  default_agent.py  file_utils.py  layout.py  sandbox.py  scheduler.py  tools.py
cowork_dash/assets/: app.js  styles.css
cowork_dash/middleware/: __init__.py  canvas.py
cowork_dash/server/: main.py  middleware.py  models.py  routes_canvas.py  routes_chat.py  routes_config.py  routes_cron.py  routes_files.py  routes_session.py  websocket.py
cowork_dash/stream/: __init__.py  event_serializer.py  session_manager.py  sse_adapter.py  websocket_adapter.py
cowork_dash/workspace/: __init__.py  canvas_manager.py
docs/: CUSTOM_THEME_REFERENCE.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: docker-visual.sh  screenshots.spec.ts  smoke.spec.ts  stub_agent.py  visual.spec.ts
frontend/src/: App.tsx  types.ts
frontend/src/components/: BrowserPanel.tsx  CanvasItem.tsx  CanvasPanel.tsx  ChatPanel.tsx  FileBrowser.tsx  FileViewer.tsx  InterruptDialog.tsx  Layout.tsx  MessageBubble.tsx  SchedulesPanel.tsx  SlashCommandMenu.tsx  StatusBar.tsx  TaskBoard.tsx  TaskDetailModal.tsx  ThemeToggle.tsx  TodoPanel.tsx  TokenUsageChart.tsx  ToolCallCard.tsx
frontend/src/hooks/: useAgentStream.ts  useCanvas.ts  useCron.ts  useFileTree.ts  useSlashCommands.ts  useTasks.ts
frontend/src/styles/: globals.css
langstage/: __init__.py  __main__.py  app.py  cli.py  config.py  config_template.py  default_agent.py  oneturn.py  scheduler.py  tools.py  virtual_fs.py
langstage/middleware/: __init__.py  canvas.py
langstage/server/: main.py  middleware.py  models.py  routes_canvas.py  routes_chat.py  routes_config.py  routes_cron.py  routes_files.py  routes_session.py  routes_tasks.py
langstage/static/: index.html
langstage/static/assets/: _baseUniq-2_XMhVxm.js  arc-DkoujW6i.js  architectureDiagram-VXUJARFQ-CLGUgDmn.js  blockDiagram-VD42YOAC-Di_St3CC.js  c4Diagram-YG6GDRKO-BZgVIC-Y.js  channel-CgWls7ZR.js  chunk-4BX2VUAB-CbR_OVqn.js  chunk-55IACEB6-BC2nGmIg.js  chunk-B4BG7PRW-i6L5G33n.js  chunk-DI55MBZ5-BJbjuv-5.js  chunk-FMBD7UC4-DmwSB0rQ.js  chunk-QN33PNHL-BreQi-iQ.js  chunk-QZHKN3VN-BIrCJfGf.js  chunk-TZMSLE5B-LYIFans1.js  classDiagram-2ON5EDUG-BRL-4k1e.js  clone-zEdUnGaB.js  cose-bilkent-S5V4N54A-BL7lJwu5.js  dagre-6UL2VRFP-KWSNtAAk.js  diagram-PSM6KHXK-RyD9fJwg.js  diagram-QEK2KX5R-BiUNW0_s.js  diagram-S2PKOQOG-aCcpNtSj.js  erDiagram-Q2GNP2WA-nmsPIyc9.js  flowDiagram-NV44I4VS-D0u8alzi.js  ganttDiagram-JELNMOA3-W84BcUxz.js  gitGraphDiagram-NY62KEGX-DCLsG5UI.js  graph-CmpmpWyt.js  index-Ca6uh0nj.js  index-DTNWM8wO.css  infoDiagram-WHAUD3N6-fVWuXw9U.js  journeyDiagram-XKPGCS4Q-SjFfZtJR.js  kanban-definition-3W4ZIXB7-BU4Mj2X9.js  layout-BowePbdf.js  mermaid.core-xB_NtgwB.js  min-CIFyForM.js  mindmap-definition-VGOIOE7T-DVQO1yl3.js  pieDiagram-ADFJNKIX-CdcKVAE4.js  quadrantDiagram-AYHSOK5B-CB2NNPG-.js  requirementDiagram-UZGBJVZJ-uOTn5rxs.js  sankeyDiagram-TZEHDZUN-xw3pl6Mm.js  sequenceDiagram-WL72ISMW-DtZQjvib.js  (+5 more)
langstage/stream/: __init__.py
langstage/tasks/: __init__.py  sqlite_store.py
langstage/workspace/: canvas_manager.py  file_manager.py
tests/: test_agent_loader.py  test_agui.py  test_api_404.py  test_app.py  test_browser.py  test_byo_integration.py  test_canonical_workspace.py  test_canvas_report.py  test_chat_complete.py  test_cli.py  test_config.py  test_core.py  test_custom_css.py  test_default_agent.py  test_default_agent_graceful.py  test_event_serializer.py  test_file_manager.py  test_file_utils.py  test_frontend_packaging.py  test_frontend_visibility.py  test_health.py  test_init.py  test_inject.py  test_notebook_run.py  test_openapi.py  test_openapi_schemas.py  test_readme_config_priority.py  test_rename_shim.py  test_routes_tasks.py  test_sandbox.py  test_scheduler.py  test_session_manager.py  test_sqlite_store.py  test_sse_adapter.py  test_streaming.py  test_tab_visibility.py  test_task_concurrency.py  test_title_inference.py
