[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langstage"
version = "0.8.0"
description = "The web stage for your LangGraph agent — AI-powered workspace with streaming, file browser, and canvas"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "langgraph-stream-parser>=0.5,<0.6",
    # Any real use of langstage already has langgraph in the env (it is the
    # thing being hosted); declaring it makes `run --demo` work on a bare install.
    "langgraph>=1.0",
    "watchfiles>=1.0",
    "click>=8.0",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "python-multipart>=0.0.12",
    "croniter>=2.0",
    # Durable task store for the async task board (TaskRunner persistence).
    "aiosqlite>=0.19",
]

[project.optional-dependencies]
deepagents = [
    "deepagents>=0.3",
]
agui = [
    "langgraph-stream-parser[agui]>=0.5,<0.6",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.5",
]

[project.scripts]
langstage = "langstage.cli:main"
# Deprecated alias command — kept for one transition window.
cowork-dash = "langstage.cli:main"

[tool.hatch.build]
artifacts = ["langstage/static/**"]

[tool.hatch.build.targets.wheel]
packages = ["langstage", "cowork_dash"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
