[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langstage"
version = "0.13.5"
description = "The web stage for your LangGraph agent — AI-powered workspace with streaming, file browser, and canvas"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    # Since core 1.0 (ADR 0003) the SessionAdapter streams every turn ONLY through
    # the in-process AG-UI adapter, so the AG-UI runtime (ag-ui-langgraph[fastapi],
    # via core's [agui] extra) is a HARD dep. fastapi + uvicorn are already base
    # deps above, so [agui] mainly adds ag-ui-langgraph itself.
    # >=1.0.6 for the shared preflight primitive core.verify() used by `check --live`.
    "langstage-core[agui]>=1.0.7",
    # Any real use of langstage already has langgraph in the env (it is the
    # thing being hosted); declaring it makes `run --demo` work on a bare install.
    "langgraph>=1.0",
    # CanvasMiddleware subclasses langchain.agents.middleware on import, and
    # langstage.middleware is imported on hot paths (app, cli `check`, default
    # agent) — so langchain is a HARD dep, not incidental via [deepagents].
    "langchain>=1.0",
    "watchfiles>=1.0",
    "click>=8.0",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "python-multipart>=0.0.12",
    "croniter>=2.0",
    # Durable task store for the async task board (TaskRunner persistence).
    "aiosqlite>=0.19",
    # Durable agent checkpointer (auto-attached) so conversation/interrupt state
    # and the task review gate survive restarts.
    "langgraph-checkpoint-sqlite>=2.0",
]

[project.optional-dependencies]
deepagents = [
    "deepagents>=0.3",
]
# Redundant since AG-UI moved into base deps (core 1.0); kept as a no-op alias so
# existing `pip install langstage[agui]` scripts/READMEs still resolve.
agui = [
    "langstage-core[agui]>=1.0.7",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.5",
    # AG-UI runtime for the SessionAdapter's only streaming path (base deps pull
    # this via core's [agui] extra; pinned here too so the test env is explicit).
    "ag-ui-langgraph>=0.0.41",
]

[project.scripts]
langstage = "langstage.cli:main"
# Deprecated alias command — kept for one transition window.
cowork-dash = "langstage.cli:main"

[tool.hatch.build]
artifacts = ["langstage/static/**"]

[tool.hatch.build.targets.wheel]
packages = ["langstage", "cowork_dash"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
